--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                     Hi, I'm <span>Ahmad Mukhtar.</span> A Software Developer.
                 </h1>
                 <p>
-                    I'm a Software Developer, I love to create beautiful and functional Software. As a software developer I have developed my skill in Java Spring, JUnit, and Mockito while working at Careem.I have also worked as a freelancer, I've designed and developed
+                    I'm a Software Developer, I love to create beautiful and functional Software. As a software developer I have developed my skill in Java, Python,React.js,Django/Flask,Docker,Spring boot,Spring Cloud/Security, MySQL,NoSQL,Redis,RabbitMQ ,JUnit, and Mockito while working at Careem and as a freelancer, I've designed and developed
                     chat room apps, used Python for creating a discord bot and web applications using the django and Flask frameworks of Python, and developed games in C# and Unity. I excel in problem-solving and delivering high-quality solutions. Eager
                     to contribute my expertise to innovative projects. </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/u/0/uc?id=19_xpoL9G9WB9x6YbqMFRwuENNL3DsWIu&export=download" class="main-btn">
-                        <span class="btn-text">Download CV</span>
+                    <a href=https://drive.google.com/u/0/uc?id=1VHClWb2G55g6Pqbr8veUDEazMccCXT8-&export=download" class="main-btn">
+                        <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
@@ -53,8 +53,8 @@
 
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/u/0/uc?id=19_xpoL9G9WB9x6YbqMFRwuENNL3DsWIu&export=downloadd" class="main-btn">
-                            <span class="btn-text">Download CV</span>
+                        <a href="https://drive.google.com/u/0/uc?id=1VHClWb2G55g6Pqbr8veUDEazMccCXT8-&export=download" class="main-btn">
+                            <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
                     </div>
@@ -211,7 +211,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2021 - 2023</p>
+                    <p class="tl-duration">2021 - 2022</p>
                     <h5>Freelancing <span> Fiverr</span></h5>
                     <p>
                         Worked on different projects like Web Development, Android Development, and Game Development.
