--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     games in C# and Unity. I excel in problem-solving and delivering high-quality solutions. Eager
                     to contribute my expertise to innovative projects. </p>
                 <div class="btn-con">
-                    <a href=https://drive.google.com/u/0/uc?id=1VHClWb2G55g6Pqbr8veUDEazMccCXT8-&export=download" class="main-btn">
+                    <a href="https://drive.usercontent.google.com/u/0/uc?id=1kWiGQtqiOq9d1BNjk8TYP9xhFXjsb3mu&export=download" class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -61,7 +61,7 @@
 
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/u/0/uc?id=1VHClWb2G55g6Pqbr8veUDEazMccCXT8-&export=download" class="main-btn">
+                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1kWiGQtqiOq9d1BNjk8TYP9xhFXjsb3mu&export=download" class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
