Added new experience

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">20+</p>
+                            <p class="large-text">15+</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">1+</p>
+                            <p class="large-text">2+</p>
                             <p class="small-text">Years of <br /> Software Industry</p>
                         </div>
                     </div>
@@ -107,7 +107,43 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Java/Python</p>
+                        <p class="prog-title">Java/Python/Go</p>
+                        <div class="progress-con">
+                            <!-- <p class="prog-text">80%</p> -->
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">JDBC/Hibernate/SpringDataJPA</p>
+                        <div class="progress-con">
+                            <!-- <p class="prog-text">80%</p> -->
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Maven/Gardle</p>
+                        <div class="progress-con">
+                            <!-- <p class="prog-text">80%</p> -->
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Junit/Mockito</p>
+                        <div class="progress-con">
+                            <!-- <p class="prog-text">80%</p> -->
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Microservices/Monolith</p>
                         <div class="progress-con">
                             <!-- <p class="prog-text">80%</p> -->
                             <div class="progress">
@@ -135,11 +171,11 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Django/Flask</p>
+                        <p class="prog-title">Redis</p>
                         <div class="progress-con">
-                            <!-- <p class="prog-text">70%</p> -->
+                            <!-- <p class="prog-text">80%</p> -->
                             <div class="progress">
-                                <span class="python"></span>
+                                <span class="css"></span>
                             </div>
                         </div>
                     </div>
@@ -153,7 +189,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Git/Github</p>
+                        <p class="prog-title">Git/Github/Gitlab</p>
                         <div class="progress-con">
                             <!-- <p class="prog-text">90%</p> -->
                             <div class="progress">
@@ -161,9 +197,26 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="progress-bar">
-                        <p class="prog-title">AWS/Heroku</p>
+                        <p class="prog-title">Docker/AWS ECR</p>
+                        <div class="progress-con">
+                            <!-- <p class="prog-text">80%</p> -->
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">RabbitMQ/ActiveMQ</p>
+                        <div class="progress-con">
+                            <!-- <p class="prog-text">80%</p> -->
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">AWS</p>
                         <div class="progress-con">
                             <!-- <p class="prog-text">40%</p> -->
                             <div class="progress">
@@ -249,8 +302,22 @@
                         <li>Worked with Java Spring Framework, JUnit, and Mockito to implement and test new features required for the application.</li>
                         <li>Designed and implemented secure, reliable, and scalable microservices using Java Spring Framework.</li>
                         <li>Integrated Spring Security for robust authentication and authorization mechanisms, ensuring data security and access control.</li>
-                        <li>Utilized Spring Cloud for seamless communication between microservices, enabling optimal service discovery and load balancing.</li>
                         <li>Implemented comprehensive test cases using JUnit and Mockito Frameworks.</li>
+                    </ol>
+                    
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2023 - Present</p>
+                    <h5>Software Engineer<span> - Code Graphers</span></h5>
+                    <ol style="color: #b2becd; list-style:disc;">
+                        <li>Developed a dynamic web application using Java Spring, integrating CPQ APIs for enhanced functionality. Utilizing HTML/CSS/JS for the frontend, I incorporated the Thymeleaf template engine to facilitate seamless product customization.</li>
+                        <li>Implemented reCAPTCHA v3 and internationalization for enhanced security and global accessibility.</li>
+                        <li>Designed and implemented a prototype similar to Twitter using Java Spring Boot and MongoDB.</li>
+                        <li>Designed and Developed functionality of a Java application to transmit device information to RabbitMQ on connection and store it in Redis via a separate microservice, with automatic removal upon disconnection.</li>
+                        <li>Leveraged Docker for containerization, streamlining deployment and ensuring consistency across environments.</li>
                     </ol>
                     
                 </div>
