--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
 
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1YCYNX0G7Z80w66eZix7TsEpbbOk1JEt3&export=download"
+<!--                         <a href="https://drive.usercontent.google.com/u/0/uc?id=1YCYNX0G7Z80w66eZix7TsEpbbOk1JEt3&export=download"-->
+<a href="                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1DJodiQDAI1xQzuKdZ1l3qEYkY5YFITdJ&export=download"
+
                             class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
